--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -2,4 +2,26 @@
 
 body {
     text-align: center;
+    color: white;
+    background-image: url("https://i.imgur.com/leN1PbF.png");
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
+#add-exercise:hover {
+    text-decoration: underline;
+    cursor:pointer;
+}
+
+#my-workouts-display {
+    display: grid;
+}
+
+.box {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
