Major UI overhaul Updated displays of account authorization and workout tracker. Now certain elements are shown and hidden at the correct times.

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,5 +1,15 @@
 @import '~bootstrap/scss/bootstrap';
 
+// nav {
+//     background-color: black;
+//     color: white;
+//     margin-left: auto;
+// }
+
+#app-title {
+    font-family: 'Fredoka One', cursive;
+}
+
 body {
     text-align: center;
     color: white;
@@ -7,6 +17,27 @@ body {
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+    font-family: 'Fredoka', sans-serif;
+}
+
+#sign-in-link:hover {
+    text-decoration: underline;
+    cursor:pointer;
+}
+
+#sign-up-link:hover {
+    text-decoration: underline;
+    cursor:pointer;
+}
+
+.nav-link:hover {
+    text-decoration: underline;
+    cursor:pointer;
+}
+
+#return-link:hover {
+    text-decoration: underline;
+    cursor:pointer;
 }
 
 #add-exercise:hover {
@@ -19,9 +50,51 @@ body {
 }
 
 .box {
-    width: 100px;
-    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+    height: 200px;
+}
+
+#page-top {
+    background: rgba(black, 0.7);
+    width: 800px;
+    margin: auto;
+}
+
+#account-management {
+    background: rgba(black, 0.7);
+    width: 800px;
+    margin: auto;
+}
+
+#add-workout-section {
+    background: rgba(black, 0.7);
+    width: 800px;
+    margin: auto;
+}
+
+.my-workouts-section {
+    background: rgba(black, 0.7);
+    width: 800px;
+    margin: auto;
+}
+
+#my-workouts-display {
+    background: rgba(black, 0.7);
+    width: 800px;
+    margin: auto;
+}
+
+#update-workout-section {
+    background: rgba(black, 0.7);
+    width: 800px;
+    margin: auto;
+}
+
+#delete-workout-section {
+    background: rgba(black, 0.7);
+    width: 800px;
+    margin: auto;
 }
